--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^17.0.2",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
-    "react-fancy-countdown": "^1.0.3",
+    "react-fancy-countdown": "https://github.com/mccloudd/React-Fancy-Countdown",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
